tests/baselines/reference/thisInSuperCall1.errors.txt
==== tests/cases/compiler/thisInSuperCall1.ts (1 errors) ====
    class Base { 
        constructor(a: any) {}
    }
    
    class Foo extends Base {
        constructor(public x: number) {
            super(this);
                  ~~~~
!!! error TS2097: 'this' cannot be referenced in current location.
        }
    }
    